--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
     <!-- Header -->
     <header>
-      <a href="#"><span>Web</span><span>Studio</span></a>
+      <a href="./index.html"><span>Web</span><span>Studio</span></a>
       <nav>
         <ul>
           <li>
             <a href="./index.html">Studio</a>
           </li>
           <li>
-            <a href="#">Portfolio</a>
+            <a href="./portfolio.html">Portfolio</a>
           </li>
           <li>
             <a href="#">Contacts</a>
@@ -148,8 +148,9 @@
       </section>
     </main>
 
+    <!-- Footer -->
     <footer>
-      <a href="#"><span>Web</span><span>Studio</span></a>
+      <a href="./index.html"><span>Web</span><span>Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
