--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,51 @@
 </head>
 
 <body>
+    <!-- Header -->
+    <header>
+        <a href="./index.html"><span>Web</span><span>Studio</span></a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="./index.html">Studio</a>
+                </li>
+                <li>
+                    <a href="./portfolio.html">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+        <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tell:+11(000)111-11-11">+11 (000) 111-11-11</a>
+        </address>
+    </header>
+
+    <main>
+        <!-- Portfolio buttons -->
+        <section>
+            <h1>Portfolio buttons</h1>
+            <ul>
+                <li><button type="button"></button></li>
+                <li><button type="button"></button></li>
+                <li><button type="button"></button></li>
+                <li><button type="button"></button></li>
+                <li><button type="button"></button></li>
+            </ul>
+        </section>
+
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <a href="./index.html"><span>Web</span><span>Studio</span></a>
+        <p>
+            Increase the flow of customers and sales for your business with digital
+            marketing & growth solutions.
+        </p>
+    </footer>
     
 </body>
 
