--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,63 @@
         <section>
             <h1>Portfolio buttons</h1>
             <ul>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
-                <li><button type="button"></button></li>
+                <li><button type="button">All</button></li>
+                <li><button type="button">Web Site</button></li>
+                <li><button type="button">App</button></li>
+                <li><button type="button">Design</button></li>
+                <li><button type="button">Marketing</button></li>
             </ul>
+
+            <ul>
+                <li>
+                    <img src="" alt="BankApp" width="360" height="300">
+                    <h2></h2>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="Mobile" width="360" height="300">
+                    <h2></h2>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="360" height="300">
+                    <h2></h2>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="360" height="300">
+                    <h2></h2>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="360" height="300">
+                    <h2></h2>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="360" height="300">
+                    <h2></h2>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="360" height="300">
+                    <h2></h2>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="360" height="300">
+                    <h2></h2>
+                    <p></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="" height="">
+                    <h2></h2>
+                    <p></p>
+                </li>
+            </ul>
+
+
+
         </section>
 
     </main>
