--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     </header>
 
     <main>
-        <!-- Portfolio buttons -->
+        <!-- Portfolio cards -->
         <section>
             <h1>Portfolio buttons</h1>
             <ul>
