--- a/portfolio.html
+++ b/portfolio.html
@@ -44,12 +44,12 @@
 
             <ul>
                 <li>
-                    <img src="./images/bank-app.jpg" alt="BankApp" width="360" height="300">
+                    <img src="" alt="BankApp" width="360" height="300">
                     <h2></h2>
                     <p></p>
                 </li>
                 <li>
-                    <img src="./images/mobile.jpg" alt="Mobile" width="360" height="300">
+                    <img src="" alt="Mobile" width="360" height="300">
                     <h2></h2>
                     <p></p>
                 </li>
