--- a/index.html
+++ b/index.html
@@ -7,63 +7,63 @@
     <title>Web Studio</title>
   </head>
 
-  <body>
+  <body class="body">
     <!-- Header -->
-    <header>
-      <a href="./index.html"><span>Web</span><span>Studio</span></a>
-      <nav>
-        <ul>
-          <li>
-            <a href="./index.html">Studio</a>
+    <header class="header">
+      <a class="link" href="./index.html"><span>Web</span><span>Studio</span></a>
+      <nav class="nav">
+        <ul class="list">
+          <li class="item">
+            <a class="link" href="./index.html">Studio</a>
           </li>
-          <li>
-            <a href="./portfolio.html">Portfolio</a>
+          <li class="item">
+            <a class="link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
-            <a href="#">Contacts</a>
+          <li class="item">
+            <a class="link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tell:+11(000)111-11-11">+11 (000) 111-11-11</a>
+        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link" href="tell:+11(000)111-11-11">+11 (000) 111-11-11</a>
       </address>
     </header>
 
-    <main>
+    <main class="main">
       <!-- Hero -->
-      <section>
-        <h1>Effective Solutions<br>for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="section">
+        <h1 class="title">Effective Solutions<br>for Your Business</h1>
+        <button class="btn" type="button">Order Service</button>
       </section>
       <!-- Feature -->
-      <section>
-        <h2>Feature</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="section">
+        <h2 class="title">Feature</h2>
+        <ul class="list">
+          <li class="item">
+            <h3 class="subtitle">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="item">
+            <h3 class="subtitle">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="item">
+            <h3 class="subtitle">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="item">
+            <h3 class="subtitle">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -71,10 +71,10 @@
         </ul>
       </section>
       <!-- What are we doing -->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
+      <section class="section">
+        <h2 class="title">What are we doing</h2>
+        <ul class="list">
+          <li class="item">
             <img
               src="./images/monitor.jpg"
               alt="monitor"
@@ -82,7 +82,15 @@
               height="300"
             >
           </li>
-          <li>
+          <li class="item">
+            <img
+              src="./images/touchscreen.jpg"
+              alt="touchscreen"
+              width="360"
+              height="300"
+            >
+          </li>
+          <li class="item">
             <img
               src="./images/mobile.jpg"
               alt="mobile"
@@ -90,68 +98,60 @@
               height="300"
             >
           </li>
-          <li>
-            <img
-              src="./images/laptop.jpg"
-              alt="laptop"
-              width="360"
-              height="300"
-            >
-          </li>
         </ul>
       </section>
       <!-- Our team -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="section">
+        <h2 class="title">Our Team</h2>
+        <ul class="list">
+          <li class="item">
             <img
               src="./images/mark-guerrero.jpg"
               alt="Mark"
               width="264"
               height="260"
             >
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="subtitle">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/tom-ford.jpg"
               alt="Tom"              
               width="264"
               height="260"
             >
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="subtitle">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/camila-garcia.jpg"
               alt="Camila"
               width="264"
               height="260"
             >
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="subtitle">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/daniel-wilson.jpg"
               alt="Daniel"
               width="264"
               height="260"
             >
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="subtitle">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- Footer -->
-    <footer>
-      <a href="./index.html"><span>Web</span><span>Studio</span></a>
-      <p>
+    <footer class="footer">
+      <a class="link" href="./index.html"><span>Web</span><span>Studio</span></a>
+      <p class="text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
