--- a/portfolio.html
+++ b/portfolio.html
@@ -4,102 +4,98 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 
-<body>
+<body class="body">
     <!-- Header -->
-    <header>
-        <a href="./index.html"><span>Web</span><span>Studio</span></a>
-        <nav>
-            <ul>
-                <li>
-                    <a href="./index.html">Studio</a>
+    <header class="header">
+        <a class="link" href="./index.html"><span>Web</span><span>Studio</span></a>
+        <nav class="nav">
+            <ul class="list">
+                <li class="item">
+                    <a class="link" href="./index.html">Studio</a>
                 </li>
-                <li>
-                    <a href="./portfolio.html">Portfolio</a>
+                <li class="item">
+                    <a class="link" href="./portfolio.html">Portfolio</a>
                 </li>
-                <li>
-                    <a href="#">Contacts</a>
+                <li class="item">
+                    <a class="link" href="#">Contacts</a>
                 </li>
             </ul>
         </nav>
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tell:+11(000)111-11-11">+11 (000) 111-11-11</a>
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="tell:+11(000)111-11-11">+11 (000) 111-11-11</a>
         </address>
     </header>
 
-    <main>
+    <main class="main">
         <!-- Portfolio cards -->
-        <section>
-            <h1>Portfolio buttons</h1>
-            <ul>
-                <li><button type="button">All</button></li>
-                <li><button type="button">Web Site</button></li>
-                <li><button type="button">App</button></li>
-                <li><button type="button">Design</button></li>
-                <li><button type="button">Marketing</button></li>
+        <section class="section">
+            <h1 class="title">Portfolio cards</h1>
+            <ul class="list">
+                <li class="item"><button class="btn" type="button">All</button></li>
+                <li class="item"><button class="btn" type="button">Web Site</button></li>
+                <li class="item"><button class="btn" type="button">App</button></li>
+                <li class="item"><button class="btn" type="button">Design</button></li>
+                <li class="item"><button class="btn" type="button">Marketing</button></li>
             </ul>
 
-            <ul>
-                <li>
-                    <img src="" alt="BankApp" width="360" height="300">
-                    <h2></h2>
-                    <p></p>
+            <ul class="list">
+                <li class="item">
+                    <img src="./images/bank-app.jpg" alt="Bank App" width="360" height="300">
+                    <h2 class="subtitle">Banking App Interface Concept</h2>
+                    <p class="text">App</p>
                 </li>
-                <li>
-                    <img src="" alt="Mobile" width="360" height="300">
-                    <h2></h2>
-                    <p></p>
+                <li class="item">
+                    <img src="./images/payment.jpg" alt="Mobile" width="360" height="300">
+                    <h2 class="subtitle">Cashless Payment</h2>
+                    <p class="text">Marketing</p>
                 </li>
-                <li>
-                    <img src="" alt="" width="360" height="300">
-                    <h2></h2>
-                    <p></p>
+                <li class="item">
+                    <img src="./images/mobile-laptop.jpg" alt="Mobile and laptop" width="360" height="300">
+                    <h2 class="subtitle">Meditaion App</h2>
+                    <p class="text">App</p>
                 </li>
-                <li>
-                    <img src="" alt="" width="360" height="300">
-                    <h2></h2>
-                    <p></p>
+                <li class="item">
+                    <img src="./images/driver.jpg" alt="Driver taxi" width="360" height="300">
+                    <h2 class="subtitle">Taxi Service</h2>
+                    <p class="text">Marketing</p>
                 </li>
-                <li>
-                    <img src="" alt="" width="360" height="300">
-                    <h2></h2>
-                    <p></p>
+                <li class="item">
+                    <img src="./images/wallpaper-mobile.jpg" alt="Wallpaper mobile" width="360" height="300">
+                    <h2 class="subtitle">Screen Illustrations</h2>
+                    <p class="text">Design</p>
                 </li>
-                <li>
-                    <img src="" alt="" width="360" height="300">
-                    <h2></h2>
-                    <p></p>
+                <li class="item">
+                    <img src="./images/woman.jpg" alt="Woman" width="360" height="300">
+                    <h2 class="subtitle">Online Courses</h2>
+                    <p class="text">Marketing</p>
                 </li>
-                <li>
-                    <img src="" alt="" width="360" height="300">
-                    <h2></h2>
-                    <p></p>
+                <li class="item">
+                    <img src="./images/stories.jpg" alt="Instagram stories" width="360" height="300">
+                    <h2 class="subtitle">Instagram Stories Concept</h2>
+                    <p class="text">Design</p>
                 </li>
-                <li>
-                    <img src="" alt="" width="360" height="300">
-                    <h2></h2>
-                    <p></p>
+                <li class="item">
+                    <img src="./images/food.jpg" alt="Organic food" width="360" height="300">
+                    <h2 class="subtitle">Organic Food</h2>
+                    <p class="text">Web Site</p>
                 </li>
-                <li>
-                    <img src="" alt="" width="" height="">
-                    <h2></h2>
-                    <p></p>
+                <li class="item">
+                    <img src="./images/coffee.jpg" alt="Coffee" width="" height="">
+                    <h2 class="subtitle">Fresh Coffee</h2>
+                    <p class="text">Web Site</p>
                 </li>
             </ul>
-
-
-
         </section>
-
     </main>
 
     <!-- Footer -->
-    <footer>
-        <a href="./index.html"><span>Web</span><span>Studio</span></a>
-        <p>
+    <footer class="footer">
+        <a class="link" href="./index.html"><span>Web</span><span>Studio</span></a>
+        <p class="text">
             Increase the flow of customers and sales for your business with digital
             marketing & growth solutions.
         </p>
