--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Сustom styles -->
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body class="body">
+  <body class="page">
     <!-- Header -->
     <header class="header">
-      <a class="link" href="./index.html"><span>Web</span><span>Studio</span></a>
+      <a class="link" href="./index.html"
+        ><span>Web</span><span>Studio</span></a
+      >
       <nav class="nav">
         <ul class="list">
           <li class="item">
@@ -33,7 +44,7 @@
     <main class="main">
       <!-- Hero -->
       <section class="section">
-        <h1 class="title">Effective Solutions<br>for Your Business</h1>
+        <h1 class="title">Effective Solutions<br />for Your Business</h1>
         <button class="btn" type="button">Order Service</button>
       </section>
       <!-- Feature -->
@@ -80,7 +91,7 @@
               alt="monitor"
               width="360"
               height="300"
-            >
+            />
           </li>
           <li class="item">
             <img
@@ -88,7 +99,7 @@
               alt="touchscreen"
               width="360"
               height="300"
-            >
+            />
           </li>
           <li class="item">
             <img
@@ -96,7 +107,7 @@
               alt="mobile"
               width="360"
               height="300"
-            >
+            />
           </li>
         </ul>
       </section>
@@ -110,17 +121,17 @@
               alt="Mark"
               width="264"
               height="260"
-            >
+            />
             <h3 class="subtitle">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
           <li class="item">
             <img
               src="./images/tom-ford.jpg"
-              alt="Tom"              
+              alt="Tom"
               width="264"
               height="260"
-            >
+            />
             <h3 class="subtitle">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
@@ -130,7 +141,7 @@
               alt="Camila"
               width="264"
               height="260"
-            >
+            />
             <h3 class="subtitle">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
@@ -140,7 +151,7 @@
               alt="Daniel"
               width="264"
               height="260"
-            >
+            />
             <h3 class="subtitle">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
           </li>
@@ -150,12 +161,13 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <a class="link" href="./index.html"><span>Web</span><span>Studio</span></a>
+      <a class="link" href="./index.html"
+        ><span>Web</span><span>Studio</span></a
+      >
       <p class="text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
-
   </body>
 </html>
