--- a/portfolio.html
+++ b/portfolio.html
@@ -1,106 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-</head>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Сustom styles -->
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
 
-<body class="body">
+  <body class="page">
     <!-- Header -->
     <header class="header">
-        <a class="link" href="./index.html"><span>Web</span><span>Studio</span></a>
-        <nav class="nav">
-            <ul class="list">
-                <li class="item">
-                    <a class="link" href="./index.html">Studio</a>
-                </li>
-                <li class="item">
-                    <a class="link" href="./portfolio.html">Portfolio</a>
-                </li>
-                <li class="item">
-                    <a class="link" href="#">Contacts</a>
-                </li>
-            </ul>
-        </nav>
-        <address>
-            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="link" href="tell:+11(000)111-11-11">+11 (000) 111-11-11</a>
-        </address>
+      <a class="link" href="./index.html"
+        ><span>Web</span><span>Studio</span></a
+      >
+      <nav class="nav">
+        <ul class="list">
+          <li class="item">
+            <a class="link" href="./index.html">Studio</a>
+          </li>
+          <li class="item">
+            <a class="link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="item">
+            <a class="link" href="#">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <address>
+        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link" href="tell:+11(000)111-11-11">+11 (000) 111-11-11</a>
+      </address>
     </header>
 
     <main class="main">
-        <!-- Portfolio cards -->
-        <section class="section">
-            <h1 class="title">Portfolio cards</h1>
-            <ul class="list">
-                <li class="item"><button class="btn" type="button">All</button></li>
-                <li class="item"><button class="btn" type="button">Web Site</button></li>
-                <li class="item"><button class="btn" type="button">App</button></li>
-                <li class="item"><button class="btn" type="button">Design</button></li>
-                <li class="item"><button class="btn" type="button">Marketing</button></li>
-            </ul>
+      <!-- Portfolio cards -->
+      <section class="section">
+        <h1 class="title">Portfolio cards</h1>
+        <ul class="list">
+          <li class="item"><button class="btn" type="button">All</button></li>
+          <li class="item">
+            <button class="btn" type="button">Web Site</button>
+          </li>
+          <li class="item"><button class="btn" type="button">App</button></li>
+          <li class="item">
+            <button class="btn" type="button">Design</button>
+          </li>
+          <li class="item">
+            <button class="btn" type="button">Marketing</button>
+          </li>
+        </ul>
 
-            <ul class="list">
-                <li class="item">
-                    <img src="./images/bank-app.jpg" alt="Bank App" width="360" height="300">
-                    <h2 class="subtitle">Banking App Interface Concept</h2>
-                    <p class="text">App</p>
-                </li>
-                <li class="item">
-                    <img src="./images/payment.jpg" alt="Mobile" width="360" height="300">
-                    <h2 class="subtitle">Cashless Payment</h2>
-                    <p class="text">Marketing</p>
-                </li>
-                <li class="item">
-                    <img src="./images/mobile-laptop.jpg" alt="Mobile and laptop" width="360" height="300">
-                    <h2 class="subtitle">Meditaion App</h2>
-                    <p class="text">App</p>
-                </li>
-                <li class="item">
-                    <img src="./images/driver.jpg" alt="Driver taxi" width="360" height="300">
-                    <h2 class="subtitle">Taxi Service</h2>
-                    <p class="text">Marketing</p>
-                </li>
-                <li class="item">
-                    <img src="./images/wallpaper-mobile.jpg" alt="Wallpaper mobile" width="360" height="300">
-                    <h2 class="subtitle">Screen Illustrations</h2>
-                    <p class="text">Design</p>
-                </li>
-                <li class="item">
-                    <img src="./images/woman.jpg" alt="Woman" width="360" height="300">
-                    <h2 class="subtitle">Online Courses</h2>
-                    <p class="text">Marketing</p>
-                </li>
-                <li class="item">
-                    <img src="./images/stories.jpg" alt="Instagram stories" width="360" height="300">
-                    <h2 class="subtitle">Instagram Stories Concept</h2>
-                    <p class="text">Design</p>
-                </li>
-                <li class="item">
-                    <img src="./images/food.jpg" alt="Organic food" width="360" height="300">
-                    <h2 class="subtitle">Organic Food</h2>
-                    <p class="text">Web Site</p>
-                </li>
-                <li class="item">
-                    <img src="./images/coffee.jpg" alt="Coffee" width="" height="">
-                    <h2 class="subtitle">Fresh Coffee</h2>
-                    <p class="text">Web Site</p>
-                </li>
-            </ul>
-        </section>
+        <ul class="list">
+          <li class="item">
+            <img
+              src="./images/bank-app.jpg"
+              alt="Bank App"
+              width="360"
+              height="300"
+            />
+            <h2 class="subtitle">Banking App Interface Concept</h2>
+            <p class="text">App</p>
+          </li>
+          <li class="item">
+            <img
+              src="./images/payment.jpg"
+              alt="Mobile"
+              width="360"
+              height="300"
+            />
+            <h2 class="subtitle">Cashless Payment</h2>
+            <p class="text">Marketing</p>
+          </li>
+          <li class="item">
+            <img
+              src="./images/mobile-laptop.jpg"
+              alt="Mobile and laptop"
+              width="360"
+              height="300"
+            />
+            <h2 class="subtitle">Meditaion App</h2>
+            <p class="text">App</p>
+          </li>
+          <li class="item">
+            <img
+              src="./images/driver.jpg"
+              alt="Driver taxi"
+              width="360"
+              height="300"
+            />
+            <h2 class="subtitle">Taxi Service</h2>
+            <p class="text">Marketing</p>
+          </li>
+          <li class="item">
+            <img
+              src="./images/wallpaper-mobile.jpg"
+              alt="Wallpaper mobile"
+              width="360"
+              height="300"
+            />
+            <h2 class="subtitle">Screen Illustrations</h2>
+            <p class="text">Design</p>
+          </li>
+          <li class="item">
+            <img
+              src="./images/woman.jpg"
+              alt="Woman"
+              width="360"
+              height="300"
+            />
+            <h2 class="subtitle">Online Courses</h2>
+            <p class="text">Marketing</p>
+          </li>
+          <li class="item">
+            <img
+              src="./images/stories.jpg"
+              alt="Instagram stories"
+              width="360"
+              height="300"
+            />
+            <h2 class="subtitle">Instagram Stories Concept</h2>
+            <p class="text">Design</p>
+          </li>
+          <li class="item">
+            <img
+              src="./images/food.jpg"
+              alt="Organic food"
+              width="360"
+              height="300"
+            />
+            <h2 class="subtitle">Organic Food</h2>
+            <p class="text">Web Site</p>
+          </li>
+          <li class="item">
+            <img src="./images/coffee.jpg" alt="Coffee" width="" height="" />
+            <h2 class="subtitle">Fresh Coffee</h2>
+            <p class="text">Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!-- Footer -->
     <footer class="footer">
-        <a class="link" href="./index.html"><span>Web</span><span>Studio</span></a>
-        <p class="text">
-            Increase the flow of customers and sales for your business with digital
-            marketing & growth solutions.
-        </p>
+      <a class="link" href="./index.html"
+        ><span>Web</span><span>Studio</span></a
+      >
+      <p class="text">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
-    
-</body>
-
+  </body>
 </html>
