--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body class="page">
     <!-- Header -->
     <header class="header">
-      <a class="link" href="./index.html"
-        ><span>Web</span><span>Studio</span></a
+      <a class="header-logo link" href="./index.html"
+        ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
       >
       <nav class="nav">
         <ul class="list">
