--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <ul class="list">
           <li class="item">
             <img
-              src="./images/bank-app.jpg"
+              src="./images/portfolio/portfolio-img-1.jpg"
               alt="Bank App"
               width="360"
               height="300"
@@ -71,77 +71,42 @@
             <p class="text">App</p>
           </li>
           <li class="item">
-            <img
-              src="./images/payment.jpg"
-              alt="Mobile"
-              width="360"
-              height="300"
-            />
+            <img src="./images/portfolio/portfolio-img-2.jpg" alt="Mobile" width="360" height="300" />
             <h2 class="subtitle">Cashless Payment</h2>
             <p class="text">Marketing</p>
           </li>
           <li class="item">
-            <img
-              src="./images/mobile-laptop.jpg"
-              alt="Mobile and laptop"
-              width="360"
-              height="300"
-            />
+            <img src="./images/portfolio/portfolio-img-3.jpg" alt="Mobile and laptop" width="360" height="300" />
             <h2 class="subtitle">Meditaion App</h2>
             <p class="text">App</p>
           </li>
           <li class="item">
-            <img
-              src="./images/driver.jpg"
-              alt="Driver taxi"
-              width="360"
-              height="300"
-            />
+            <img src="./images/portfolio/portfolio-img-4.jpg" alt="Driver taxi" width="360" height="300" />
             <h2 class="subtitle">Taxi Service</h2>
             <p class="text">Marketing</p>
           </li>
           <li class="item">
-            <img
-              src="./images/wallpaper-mobile.jpg"
-              alt="Wallpaper mobile"
-              width="360"
-              height="300"
-            />
+            <img src="./images/portfolio/portfolio-img-5.jpg" alt="Wallpaper mobile" width="360" height="300" />
             <h2 class="subtitle">Screen Illustrations</h2>
             <p class="text">Design</p>
           </li>
           <li class="item">
-            <img
-              src="./images/woman.jpg"
-              alt="Woman"
-              width="360"
-              height="300"
-            />
+            <img src="./images/portfolio/portfolio-img-6.jpg" alt="Woman" width="360" height="300" />
             <h2 class="subtitle">Online Courses</h2>
             <p class="text">Marketing</p>
           </li>
           <li class="item">
-            <img
-              src="./images/stories.jpg"
-              alt="Instagram stories"
-              width="360"
-              height="300"
-            />
+            <img src="./images/portfolio/portfolio-img-7.jpg" alt="Instagram stories" width="360" height="300" />
             <h2 class="subtitle">Instagram Stories Concept</h2>
             <p class="text">Design</p>
           </li>
           <li class="item">
-            <img
-              src="./images/food.jpg"
-              alt="Organic food"
-              width="360"
-              height="300"
-            />
+            <img src="./images/portfolio/portfolio-img-8.jpg" alt="Organic food" width="360" height="300" />
             <h2 class="subtitle">Organic Food</h2>
             <p class="text">Web Site</p>
           </li>
           <li class="item">
-            <img src="./images/coffee.jpg" alt="Coffee" width="" height="" />
+            <img src="./images/portfolio/portfolio-img-9.jpg" alt="Coffee" width="" height="" />
             <h2 class="subtitle">Fresh Coffee</h2>
             <p class="text">Web Site</p>
           </li>
