--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <ul class="list">
           <li class="item">
             <img
-              src="./images/monitor.jpg"
+              src="./images/work/work-img-1.jpg"
               alt="monitor"
               width="360"
               height="300"
@@ -95,7 +95,7 @@
           </li>
           <li class="item">
             <img
-              src="./images/touchscreen.jpg"
+              src="./images/work/work-img-2.jpg"
               alt="touchscreen"
               width="360"
               height="300"
@@ -103,7 +103,7 @@
           </li>
           <li class="item">
             <img
-              src="./images/mobile.jpg"
+              src="./images/work/work-img-3.jpg"
               alt="mobile"
               width="360"
               height="300"
@@ -117,7 +117,7 @@
         <ul class="list">
           <li class="item">
             <img
-              src="./images/mark-guerrero.jpg"
+              src="./images/team/mark.jpg"
               alt="Mark"
               width="264"
               height="260"
@@ -127,7 +127,7 @@
           </li>
           <li class="item">
             <img
-              src="./images/tom-ford.jpg"
+              src="./images/team/tom.jpg"
               alt="Tom"
               width="264"
               height="260"
@@ -137,7 +137,7 @@
           </li>
           <li class="item">
             <img
-              src="./images/camila-garcia.jpg"
+              src="./images/team/camila.jpg"
               alt="Camila"
               width="264"
               height="260"
@@ -147,7 +147,7 @@
           </li>
           <li class="item">
             <img
-              src="./images/daniel-wilson.jpg"
+              src="./images/team/daniel.jpg"
               alt="Daniel"
               width="264"
               height="260"
