--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <a class="header-logo link" href="./index.html"
         ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
       >
-      <nav class="nav">
-        <ul class="list">
+      <nav class="header-nav">
+        <ul class="header-list">
           <li class="item">
             <a class="link" href="./index.html">Studio</a>
           </li>
