--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </nav>
       <address>
         <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="link" href="tell:+11(000)111-11-11">+11 (000) 111-11-11</a>
+        <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
       </address>
     </header>
 
