--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
   <body class="page">
     <!-- Header -->
     <header class="header">
-      <a class="header-logo link" href="./index.html"
-        ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
-      >
       <nav class="header-nav">
+        <a class="header-logo link" href="./index.html"
+          ><span class="logo-web">Web</span
+          ><span class="logo-studio">Studio</span></a
+        >
         <ul class="header-list">
           <li class="item">
             <a class="link" href="./index.html">Studio</a>
@@ -35,10 +36,16 @@
           </li>
         </ul>
       </nav>
-      <address>
-        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-      </address>
+      <ul class="list">
+        <li class="item">
+          <a class="link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="item">
+          <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
+      </ul>
     </header>
 
     <main class="main">
