--- a/index.html
+++ b/index.html
@@ -36,16 +36,18 @@
           </li>
         </ul>
       </nav>
-      <ul class="list">
-        <li class="item">
-          <a class="link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="item">
-          <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </li>
-      </ul>
+      <address>
+        <ul class="list">
+          <li class="item">
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="item">
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
+      </address>
     </header>
 
     <main class="main">
