--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,10 @@
   <body class="page">
     <!-- Header -->
     <header class="header">
-      <a class="link" href="./index.html"
-        ><span>Web</span><span>Studio</span></a
-      >
       <nav class="nav">
+        <a class="link" href="./index.html"
+          ><span>Web</span><span>Studio</span></a
+        >
         <ul class="list">
           <li class="item">
             <a class="link" href="./index.html">Studio</a>
@@ -36,8 +36,18 @@
         </ul>
       </nav>
       <address>
-        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="link" href="tell:+11(000)111-11-11">+11 (000) 111-11-11</a>
+        <ul>
+          <li>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
       </address>
     </header>
 
@@ -71,42 +81,82 @@
             <p class="text">App</p>
           </li>
           <li class="item">
-            <img src="./images/portfolio/portfolio-img-2.jpg" alt="Mobile" width="360" height="300" />
+            <img
+              src="./images/portfolio/portfolio-img-2.jpg"
+              alt="Mobile"
+              width="360"
+              height="300"
+            />
             <h2 class="subtitle">Cashless Payment</h2>
             <p class="text">Marketing</p>
           </li>
           <li class="item">
-            <img src="./images/portfolio/portfolio-img-3.jpg" alt="Mobile and laptop" width="360" height="300" />
+            <img
+              src="./images/portfolio/portfolio-img-3.jpg"
+              alt="Mobile and laptop"
+              width="360"
+              height="300"
+            />
             <h2 class="subtitle">Meditaion App</h2>
             <p class="text">App</p>
           </li>
           <li class="item">
-            <img src="./images/portfolio/portfolio-img-4.jpg" alt="Driver taxi" width="360" height="300" />
+            <img
+              src="./images/portfolio/portfolio-img-4.jpg"
+              alt="Driver taxi"
+              width="360"
+              height="300"
+            />
             <h2 class="subtitle">Taxi Service</h2>
             <p class="text">Marketing</p>
           </li>
           <li class="item">
-            <img src="./images/portfolio/portfolio-img-5.jpg" alt="Wallpaper mobile" width="360" height="300" />
+            <img
+              src="./images/portfolio/portfolio-img-5.jpg"
+              alt="Wallpaper mobile"
+              width="360"
+              height="300"
+            />
             <h2 class="subtitle">Screen Illustrations</h2>
             <p class="text">Design</p>
           </li>
           <li class="item">
-            <img src="./images/portfolio/portfolio-img-6.jpg" alt="Woman" width="360" height="300" />
+            <img
+              src="./images/portfolio/portfolio-img-6.jpg"
+              alt="Woman"
+              width="360"
+              height="300"
+            />
             <h2 class="subtitle">Online Courses</h2>
             <p class="text">Marketing</p>
           </li>
           <li class="item">
-            <img src="./images/portfolio/portfolio-img-7.jpg" alt="Instagram stories" width="360" height="300" />
+            <img
+              src="./images/portfolio/portfolio-img-7.jpg"
+              alt="Instagram stories"
+              width="360"
+              height="300"
+            />
             <h2 class="subtitle">Instagram Stories Concept</h2>
             <p class="text">Design</p>
           </li>
           <li class="item">
-            <img src="./images/portfolio/portfolio-img-8.jpg" alt="Organic food" width="360" height="300" />
+            <img
+              src="./images/portfolio/portfolio-img-8.jpg"
+              alt="Organic food"
+              width="360"
+              height="300"
+            />
             <h2 class="subtitle">Organic Food</h2>
             <p class="text">Web Site</p>
           </li>
           <li class="item">
-            <img src="./images/portfolio/portfolio-img-9.jpg" alt="Coffee" width="" height="" />
+            <img
+              src="./images/portfolio/portfolio-img-9.jpg"
+              alt="Coffee"
+              width=""
+              height=""
+            />
             <h2 class="subtitle">Fresh Coffee</h2>
             <p class="text">Web Site</p>
           </li>
