--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <ul class="list">
           <li class="item">
             <img
-              src="./images/team/mark.jpg"
+              src="./images/team/mark-guerrero.jpg"
               alt="Mark"
               width="264"
               height="260"
