--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </li>
           <li class="item">
             <img
-              src="./images/team/tom.jpg"
+              src="./images/team/tom-ford.jpg"
               alt="Tom"
               width="264"
               height="260"
@@ -146,7 +146,7 @@
           </li>
           <li class="item">
             <img
-              src="./images/team/camila.jpg"
+              src="./images/team/camila-garcia.jpg"
               alt="Camila"
               width="264"
               height="260"
@@ -156,7 +156,7 @@
           </li>
           <li class="item">
             <img
-              src="./images/team/daniel.jpg"
+              src="./images/team/daniel-wilson.jpg"
               alt="Daniel"
               width="264"
               height="260"
