--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <!-- Header -->
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo link" href="./index.html"
-          ><span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
+        <a class="nav-logo link" href="./index.html"
+          ><span class="nav-logo-web">Web</span
+          ><span class="nav-logo-studio">Studio</span></a
         >
-        <ul class="header-list">
-          <li class="item">
+        <ul class="header-list list">
+          <li class="header-list-item item">
             <a class="link" href="./index.html">Studio</a>
           </li>
           <li class="item">
