--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   <body class="page">
     <!-- Header -->
     <header class="header">
-      <nav class="header-nav">
-        <a class="nav-logo link" href="./index.html"
-          ><span class="nav-logo-web">Web</span
-          ><span class="nav-logo-studio">Studio</span></a
+      <nav class="site-nav">
+        <a class="logo link" href="./index.html"
+          ><span class="logo-web">Web</span
+          ><span class="logo-studio">Studio</span></a
         >
-        <ul class="header-list list">
-          <li class="header-list-item item">
+        <ul class="nav-list list">
+          <li class="item">
             <a class="link" href="./index.html">Studio</a>
           </li>
           <li class="item">
@@ -52,13 +52,13 @@
 
     <main class="main">
       <!-- Hero -->
-      <section class="section">
-        <h1 class="title">Effective Solutions<br />for Your Business</h1>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions<br />for Your Business</h1>
         <button class="btn" type="button">Order Service</button>
       </section>
       <!-- Feature -->
       <section class="section">
-        <h2 class="title">Feature</h2>
+        <h2 class="section-title">Feature</h2>
         <ul class="list">
           <li class="item">
             <h3 class="subtitle">Strategy</h3>
@@ -92,7 +92,7 @@
       </section>
       <!-- What are we doing -->
       <section class="section">
-        <h2 class="title">What are we doing</h2>
+        <h2 class="section-title">What are we doing</h2>
         <ul class="list">
           <li class="item">
             <img
@@ -122,7 +122,7 @@
       </section>
       <!-- Our team -->
       <section class="section">
-        <h2 class="title">Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul class="list">
           <li class="item">
             <img
