--- a/portfolio.html
+++ b/portfolio.html
@@ -43,9 +43,7 @@
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
