--- a/portfolio.html
+++ b/portfolio.html
@@ -17,33 +17,36 @@
   </head>
 
   <body class="page">
-    <!-- Header -->
+    <!-- Header -->    
     <header class="header">
-      <nav class="nav">
-        <a class="link" href="./index.html"
-          ><span>Web</span><span>Studio</span></a
+      <nav class="site-nav">
+        <a class="nav-logo link" href="./index.html"
+          ><span class="logo-web">Web</span
+          ><span class="logo-studio">Studio</span></a
         >
-        <ul class="list">
-          <li class="item">
-            <a class="link" href="./index.html">Studio</a>
+        <ul class="nav-list list">
+          <li class="nav-item item">
+            <a class="nav-link link" href="./index.html">Studio</a>
           </li>
-          <li class="item">
-            <a class="link" href="./portfolio.html">Portfolio</a>
+          <li class="nav-item item">
+            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="item">
-            <a class="link" href="#">Contacts</a>
+          <li class="nav-item item">
+            <a class="nav-link link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li>
-            <a class="link" href="mailto:info@devstudio.com"
+        <ul class="address-list list">
+          <li class="address-item item">
+            <a class="mail-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="address-item item">
+            <a class="tel-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -51,9 +54,9 @@
 
     <main class="main">
       <!-- Portfolio cards -->
-      <section class="section">
-        <h1 class="title">Portfolio cards</h1>
-        <ul class="list">
+      <section class="portfolio section">
+        <h1 class="portfolio-title title">Portfolio cards</h1>
+        <ul class="portfolio-btns list">
           <li class="item"><button class="btn" type="button">All</button></li>
           <li class="item">
             <button class="btn" type="button">Web Site</button>
@@ -67,7 +70,7 @@
           </li>
         </ul>
 
-        <ul class="list">
+        <ul class="portfolio-cards list">
           <li class="item">
             <img
               src="./images/portfolio/portfolio-img-1.jpg"
