--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             >
           </li>
           <li class="address-item">
-            <a class="tel-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="tel-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
