--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,9 @@
     <!-- Header -->    
     <header class="header">
       <nav class="site-nav">
-        <a class="nav-logo link" href="./index.html"
-          ><span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
+        <a class="header-logo link" href="./index.html"
+          ><span class="header-logo-web">Web</span
+          ><span class="header-logo-studio">Studio</span></a
         >
         <ul class="nav-list list">
           <li class="nav-item">
@@ -55,18 +55,18 @@
     <main class="main">
       <!-- Portfolio cards -->
       <section class="portfolio section">
-        <h1 class="portfolio-title title">Portfolio cards</h1>
-        <ul class="portfolio-btns list">
-          <li class="item"><button class="btn" type="button">All</button></li>
+        <h1 class="portfolio-title">Portfolio cards</h1>
+        <ul class="portfolio-buttons list">
+          <li class="item"><button class="portfolio-btn" type="button">All</button></li>
           <li class="item">
-            <button class="btn" type="button">Web Site</button>
+            <button class="portfolio-btn" type="button">Web Site</button>
           </li>
-          <li class="item"><button class="btn" type="button">App</button></li>
+          <li class="item"><button class="portfolio-btn" type="button">App</button></li>
           <li class="item">
-            <button class="btn" type="button">Design</button>
+            <button class="portfolio-btn" type="button">Design</button>
           </li>
           <li class="item">
-            <button class="btn" type="button">Marketing</button>
+            <button class="portfolio-btn" type="button">Marketing</button>
           </li>
         </ul>
 
@@ -78,8 +78,8 @@
               width="360"
               height="300"
             />
-            <h2 class="subtitle">Banking App Interface Concept</h2>
-            <p class="text">App</p>
+            <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
+            <p class="portfolio-text">App</p>
           </li>
           <li class="item">
             <img
@@ -88,8 +88,8 @@
               width="360"
               height="300"
             />
-            <h2 class="subtitle">Cashless Payment</h2>
-            <p class="text">Marketing</p>
+            <h2 class="portfolio-subtitle">Cashless Payment</h2>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li class="item">
             <img
@@ -98,8 +98,8 @@
               width="360"
               height="300"
             />
-            <h2 class="subtitle">Meditaion App</h2>
-            <p class="text">App</p>
+            <h2 class="portfolio-subtitle">Meditaion App</h2>
+            <p class="portfolio-text">App</p>
           </li>
           <li class="item">
             <img
@@ -108,8 +108,8 @@
               width="360"
               height="300"
             />
-            <h2 class="subtitle">Taxi Service</h2>
-            <p class="text">Marketing</p>
+            <h2 class="portfolio-subtitle">Taxi Service</h2>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li class="item">
             <img
@@ -118,8 +118,8 @@
               width="360"
               height="300"
             />
-            <h2 class="subtitle">Screen Illustrations</h2>
-            <p class="text">Design</p>
+            <h2 class="portfolio-subtitle">Screen Illustrations</h2>
+            <p class="portfolio-text">Design</p>
           </li>
           <li class="item">
             <img
@@ -128,8 +128,8 @@
               width="360"
               height="300"
             />
-            <h2 class="subtitle">Online Courses</h2>
-            <p class="text">Marketing</p>
+            <h2 class="portfolio-subtitle">Online Courses</h2>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li class="item">
             <img
@@ -138,8 +138,8 @@
               width="360"
               height="300"
             />
-            <h2 class="subtitle">Instagram Stories Concept</h2>
-            <p class="text">Design</p>
+            <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
+            <p class="portfolio-text">Design</p>
           </li>
           <li class="item">
             <img
@@ -148,8 +148,8 @@
               width="360"
               height="300"
             />
-            <h2 class="subtitle">Organic Food</h2>
-            <p class="text">Web Site</p>
+            <h2 class="portfolio-subtitle">Organic Food</h2>
+            <p class="portfolio-text">Web Site</p>
           </li>
           <li class="item">
             <img
@@ -158,8 +158,8 @@
               width=""
               height=""
             />
-            <h2 class="subtitle">Fresh Coffee</h2>
-            <p class="text">Web Site</p>
+            <h2 class="portfolio-subtitle">Fresh Coffee</h2>
+            <p class="portfolio-text">Web Site</p>
           </li>
         </ul>
       </section>
@@ -167,10 +167,10 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <a class="link" href="./index.html"
-        ><span>Web</span><span>Studio</span></a
+      <a class="footer-logo link" href="./index.html"
+        ><span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span></a
       >
-      <p class="text">
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
