--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <!-- Header -->
     <header class="header">
       <nav class="site-nav">
-        <a class="nav-logo link" href="./index.html"
-          ><span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
+        <a class="header-logo link" href="./index.html"
+          ><span class="header-logo-web">Web</span
+          ><span class="header-logo-studio">Studio</span></a
         >
         <ul class="nav-list list">
           <li class="nav-item">
@@ -60,7 +60,7 @@
       </section>
       <!-- Feature -->
       <section class="feature section">
-        <h2 class="feature-title title">Feature</h2>
+        <h2 class="feature-title">Feature</h2>
         <ul class="feature-list list">
           <li class="feature-item">
             <h3 class="feature-subtitle">Strategy</h3>
@@ -94,9 +94,9 @@
       </section>
       <!-- What are we doing -->
       <section class="works section">
-        <h2 class="section-title title">What are we doing</h2>
-        <ul class="list">
-          <li class="item">
+        <h2 class="works-title">What are we doing</h2>
+        <ul class="works-list list">
+          <li class="works-item">
             <img
               src="./images/work/work-img-1.jpg"
               alt="monitor"
@@ -104,7 +104,7 @@
               height="300"
             />
           </li>
-          <li class="item">
+          <li class="works-item">
             <img
               src="./images/work/work-img-2.jpg"
               alt="touchscreen"
@@ -112,7 +112,7 @@
               height="300"
             />
           </li>
-          <li class="item">
+          <li class="works-item">
             <img
               src="./images/work/work-img-3.jpg"
               alt="mobile"
@@ -124,46 +124,46 @@
       </section>
       <!-- Our team -->
       <section class="team section">
-        <h2 class="team-title title">Our Team</h2>
+        <h2 class="team-title">Our Team</h2>
         <ul class="team-list list">
           <li class="team-item">
             <img
               src="./images/team/mark-guerrero.jpg"
-              alt="Mark"
+              alt="Mark Guerrero"
               width="264"
               height="260"
             />
-            <h3 class="subtitle">Mark Guerrero</h3>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
           <li class="team-item">
             <img
               src="./images/team/tom-ford.jpg"
-              alt="Tom"
+              alt="Tom Ford"
               width="264"
               height="260"
             />
-            <h3 class="subtitle">Tom Ford</h3>
+            <h3 class="team-subtitle">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img
               src="./images/team/camila-garcia.jpg"
-              alt="Camila"
+              alt="Camila Garcia"
               width="264"
               height="260"
             />
-            <h3 class="subtitle">Camila Garcia</h3>
+            <h3 class="team-subtitle">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
           <li class="team-item">
             <img
               src="./images/team/daniel-wilson.jpg"
-              alt="Daniel"
+              alt="Daniel Wilson"
               width="264"
               height="260"
             />
-            <h3 class="subtitle">Daniel Wilson</h3>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
           </li>
         </ul>
@@ -172,10 +172,10 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <a class="link" href="./index.html"
-        ><span>Web</span><span>Studio</span></a
+      <a class="footer-logo link" href="./index.html"
+        ><span class="footer-logo-web">Web</span><span class="footer-logo-studio">Studio</span></a
       >
-      <p class="text">
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
