--- a/portfolio.html
+++ b/portfolio.html
@@ -159,8 +159,8 @@
             <img
               src="./images/portfolio/portfolio-img-9.jpg"
               alt="Coffee"
-              width=""
-              height=""
+              width="360"
+              height="300"
             />
             <h2 class="portfolio-subtitle">Fresh Coffee</h2>
             <p class="portfolio-text">Web Site</p>
