--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link link" href="#">Contacts</a>
+            <a class="nav-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
