--- a/portfolio.html
+++ b/portfolio.html
@@ -76,14 +76,16 @@
 
         <ul class="portfolio-cards list">
           <li class="item">
-            <img
-              src="./images/portfolio/portfolio-img-1.jpg"
-              alt="Bank App"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
-            <p class="portfolio-text">App</p>
+            <a href="">
+              <img
+                src="./images/portfolio/portfolio-img-1.jpg"
+                alt="Bank App"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-subtitle">Banking App Interface Concept</h2>
+              <p class="portfolio-text">App</p>
+            </a>
           </li>
           <li class="item">
             <img
