--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
 
         <ul class="portfolio-cards list">
           <li class="item">
-            <a href="">
+            <a class="link" href="">
               <img
                 src="./images/portfolio/portfolio-img-1.jpg"
                 alt="Bank App"
