--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,7 @@
     <header class="header">
       <nav class="site-nav">
         <a class="header-logo link" href="./index.html"
-          ><span class="header-logo-web">Web</span
-          ><span class="header-logo-studio">Studio</span></a
+          >Web<span class="header-logo-studio">Studio</span></a
         >
         <ul class="nav-list list">
           <li class="nav-item">
