--- a/portfolio.html
+++ b/portfolio.html
@@ -86,85 +86,106 @@
               <p class="portfolio-text">App</p>
             </a>
           </li>
+
           <li class="item">
-            <img
-              src="./images/portfolio/portfolio-img-2.jpg"
-              alt="Mobile"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-subtitle">Cashless Payment</h2>
-            <p class="portfolio-text">Marketing</p>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/portfolio-img-2.jpg"
+                alt="Mobile"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-subtitle">Cashless Payment</h2>
+              <p class="portfolio-text">Marketing</p>
+            </a>
+          </li>
+
+          <li class="item">
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/portfolio-img-3.jpg"
+                alt="Mobile and laptop"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-subtitle">Meditaion App</h2>
+              <p class="portfolio-text">App</p>
+            </a>
+          </li>
+
+          <li class="item">
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/portfolio-img-4.jpg"
+                alt="Driver taxi"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-subtitle">Taxi Service</h2>
+              <p class="portfolio-text">Marketing</p>
+            </a>
+          </li>
+
+          <li class="item">
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/portfolio-img-5.jpg"
+                alt="Wallpaper mobile"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-subtitle">Screen Illustrations</h2>
+              <p class="portfolio-text">Design</p>
+            </a>
+          </li>
+
+          <li class="item">
+            <a class="link" class="link" href="">
+              <img
+                src="./images/portfolio/portfolio-img-6.jpg"
+                alt="Woman"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-subtitle">Online Courses</h2>
+              <p class="portfolio-text">Marketing</p>
+            </a>
           </li>
           <li class="item">
-            <img
-              src="./images/portfolio/portfolio-img-3.jpg"
-              alt="Mobile and laptop"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-subtitle">Meditaion App</h2>
-            <p class="portfolio-text">App</p>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/portfolio-img-7.jpg"
+                alt="Instagram stories"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
+              <p class="portfolio-text">Design</p>
+            </a>
           </li>
           <li class="item">
-            <img
-              src="./images/portfolio/portfolio-img-4.jpg"
-              alt="Driver taxi"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-subtitle">Taxi Service</h2>
-            <p class="portfolio-text">Marketing</p>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/portfolio-img-8.jpg"
+                alt="Organic food"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-subtitle">Organic Food</h2>
+              <p class="portfolio-text">Web Site</p>
+            </a>
           </li>
           <li class="item">
-            <img
-              src="./images/portfolio/portfolio-img-5.jpg"
-              alt="Wallpaper mobile"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-subtitle">Screen Illustrations</h2>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/portfolio/portfolio-img-6.jpg"
-              alt="Woman"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-subtitle">Online Courses</h2>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/portfolio/portfolio-img-7.jpg"
-              alt="Instagram stories"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/portfolio/portfolio-img-8.jpg"
-              alt="Organic food"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-subtitle">Organic Food</h2>
-            <p class="portfolio-text">Web Site</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/portfolio/portfolio-img-9.jpg"
-              alt="Coffee"
-              width="360"
-              height="300"
-            />
-            <h2 class="portfolio-subtitle">Fresh Coffee</h2>
-            <p class="portfolio-text">Web Site</p>
+            <a class="link" href="">
+              <img
+                src="./images/portfolio/portfolio-img-9.jpg"
+                alt="Coffee"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-subtitle">Fresh Coffee</h2>
+              <p class="portfolio-text">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
