--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
                 width="360"
                 height="300"
               />
-              <h2 class="portfolio-subtitle">Meditaion App</h2>
+              <h2 class="portfolio-subtitle">Meditation App</h2>
               <p class="portfolio-text">App</p>
             </a>
           </li>
