--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
           </li>
 
           <li class="item">
-            <a class="link" class="link" href="">
+            <a class="link" href="">
               <img
                 src="./images/portfolio/portfolio-img-6.jpg"
                 alt="Woman"
